2007-01-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/DefaultLoaderRepository.java:
	(loadClass(String)): Made static.
	(loadClassWithout(String,ClassLoader)): Likewise.

2007-01-15  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/exception/TypeMismatchException.java: New file.
	* gnu/classpath/jdwp/exception/InvalidFrameException.java: Fix indentation.
	* gnu/classpath/jdwp/exception/InvalidSlotException.java: Fix indentation.
	
2007-01-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeValueExp.java:
	Corrected serialVersionUID typo.
	* javax/management/DefaultLoaderRepository.java:
	New file.
	* javax/management/MBeanServerFactory.java:
	Add generic typing.
	
2007-01-15  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/exception/InvalidFrameException.java: New file.

2007-01-15  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/exception/AbsentInformationException.java: New file.

2007-01-15  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/exception/InvalidSlotException.java: New file.

2007-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeValueExp.java: New file.
	* javax/management/QueryEval.java: Likewise.
	* javax/management/StringValueExp.java: Likewise.
	
2007-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeChangeNotificationFilter.java:
	New file.
	
2007-01-11  Andreas Tobler  <a.tobler@schweiz.org>

	* examples/gnu/classpath/examples/awt/AicasGraphicsBenchmark.java
	(AicasGraphicsBenchmark): Load images from ../icons.
	* examples/gnu/classpath/examples/java2d/J2dBenchmark.java (init):
	Likewise.
	* examples/Makefile.am (EXAMPLE_ICONS): Add rule to copy *.gif files
	to icons.
	* examples/gnu/classpath/examples/awt/aicas.png: Move to ../icons.
	Delete here.
	* examples/gnu/classpath/examples/awt/palme.gif: Likewise.
	* examples/gnu/classpath/examples/java2d/aicas.png: Likewise.