@@ -1,3 +1,10 @@
+2007-01-17  Mark Wielaard  <mark@klomp.org>
+
+	* javax/activity/ActivityCompletedException.java: New file.
+	* javax/activity/ActivityRequiredException.java: Likewise.
+	* javax/activity/InvalidActivityException.java: Likewise.
+	* javax/activity/package.html: Likewise.
+
 2007-01-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/DefaultLoaderRepository.java:
